--- a/Algorithm/Algorithm/Algorithm.vcxproj
+++ b/Algorithm/Algorithm/Algorithm.vcxproj
@@ -19,7 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="b1929.cpp" />
+    <ClCompile Include="b1748.cpp" />
+    <ClCompile Include="b1929.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
