--- a/Algorithm/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm/Algorithm.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="b16929.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="binarySearch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
