--- a/Algorithm/Algorithm/Algorithm.vcxproj
+++ b/Algorithm/Algorithm/Algorithm.vcxproj
@@ -19,7 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="b4963.cpp" />
+    <ClCompile Include="b11053.cpp" />
+    <ClCompile Include="b4963.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
