--- a/Algorithm/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm/Algorithm.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="b11053.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="b14002.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
