--- a/Algorithm/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm/Algorithm.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="b2667.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="b16947.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
