--- a/Algorithm/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm/Algorithm.vcxproj.filters
@@ -42,5 +42,8 @@
     <ClCompile Include="b1709.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="b2225.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
