--- a/Algorithm/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm/Algorithm.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="b1932.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="b16194.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
