--- a/Algorithm/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm/Algorithm.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClCompile Include="b16194.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="b15665.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
