BOJ_12738 tried twice

--- a/WorkOnProblem/Algorithm/Algorithm.vcxproj.filters
+++ b/WorkOnProblem/Algorithm/Algorithm.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClCompile Include="165P_TSP.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BOJ_12738_1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BOJ_12738_2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
